# olm-converter

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
converter/: __init__.py  ancillary.py  builder.py  cli.py  extractor.py  parser.py  writer.py
tests/: test_ancillary.py  test_builder.py  test_extractor.py  test_parser.py  test_writer.py
