[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "olm-converter"
version = "0.1.0"
description = "Convert Outlook for Mac OLM archives into MBOX, EML, VCF, and ICS exports."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Open Source Contributors" }
]
keywords = ["olm", "outlook", "mbox", "eml", "email", "migration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: End Users/Desktop",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Communications :: Email",
  "Topic :: Utilities",
]
dependencies = [
  "chardet>=5.2.0",
  "rich>=13.7.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
olm-converter = "converter.cli:main"

[tool.setuptools]
include-package-data = false

[tool.setuptools.packages.find]
include = ["converter*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
